syntax = "proto3";

package platform.type.v2;

option go_package = "github.com/openecosystems/ecosystem/libs/protobuf/go/sdk/v2beta/gen/platform/type/v2;typev2pb";

enum CredentialType {
  CREDENTIAL_TYPE_UNSPECIFIED = 0; // Unspecified or unknown credential.
  CREDENTIAL_TYPE_ACCOUNT_AUTHORITY = 1; // Credential for an account authority.
  CREDENTIAL_TYPE_MESH_ACCOUNT = 2; // Credential for a mesh service account.
}

enum Curve {
  CURVE_UNSPECIFIED = 0;
  CURVE_EDDSA = 1;
  CURVE_ECDSA = 2;
}

message Credential {

  CredentialType type = 1;
  string mesh_account_id = 2;
  string ecosystem_slug = 3;
  string mesh_hostname = 4;
  string mesh_ip = 5;
  Curve curve = 6;
  string aa_cert_x509 = 7;
  string aa_cert_x509_qr_code = 8;
  string aa_private_key = 9;
  string cert_x509 = 10;
  string cert_x509_qr_code = 11;
  string private_key = 12;
  string n_key = 13;
  repeated string groups = 14;
  repeated string subnets = 15;

  //google.protobuf.Duration duration = 6;

}